Changes to support scope based tokens
