# credmgr/swagger_server/models/__init__.py
@@ -3,4 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from credmgr.swagger_server.models.cred_mgr_response import CredMgrResponse
 from credmgr.swagger_server.models.cred_mgr_response_value import CredMgrResponseValue
+from credmgr.swagger_server.models.refresh_revoke_request import RefreshRevokeRequest
