# credmgr/swagger_server/models/refresh_revoke_request.py
@@ -1,20 +1,23 @@
 # coding: utf-8
 
 from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
 
 from credmgr.swagger_server.models.base_model_ import Model
 from credmgr.swagger_server import util
 
 
-class RefreshRequest(Model):
+class RefreshRevokeRequest(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, refresh_token: str=None):  # noqa: E501
-        """RefreshRequest - a model defined in Swagger
+        """RefreshRevokeRequest - a model defined in Swagger
 
-        :param refresh_token: The refresh_token of this RefreshRequest.  # noqa: E501
+        :param refresh_token: The refresh_token of this RefreshRevokeRequest.  # noqa: E501
         :type refresh_token: str
         """
         self.swagger_types = {
@@ -27,34 +30,34 @@ class RefreshRequest(Model):
         self._refresh_token = refresh_token
 
     @classmethod
-    def from_dict(cls, dikt) -> 'RefreshRequest':
+    def from_dict(cls, dikt) -> 'RefreshRevokeRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The refreshRequest of this RefreshRequest.  # noqa: E501
-        :rtype: RefreshRequest
+        :return: The refresh_revoke_Request of this RefreshRevokeRequest.  # noqa: E501
+        :rtype: RefreshRevokeRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def refresh_token(self) -> str:
-        """Gets the refresh_token of this RefreshRequest.
+        """Gets the refresh_token of this RefreshRevokeRequest.
 
         Refresh Token  # noqa: E501
 
-        :return: The refresh_token of this RefreshRequest.
+        :return: The refresh_token of this RefreshRevokeRequest.
         :rtype: str
         """
         return self._refresh_token
 
     @refresh_token.setter
     def refresh_token(self, refresh_token: str):
-        """Sets the refresh_token of this RefreshRequest.
+        """Sets the refresh_token of this RefreshRevokeRequest.
 
         Refresh Token  # noqa: E501
 
-        :param refresh_token: The refresh_token of this RefreshRequest.
+        :param refresh_token: The refresh_token of this RefreshRevokeRequest.
         :type refresh_token: str
         """
         if refresh_token is None:
